# NovarcScript

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/assets/: demo.nas  test.cpp
src/core/: Env.hpp  Lexer.cpp  Lexer.hpp  Parser.hpp
src/struct/: BasicType.hpp  Color.hpp  Tree.cpp  Tree.hpp
